--- a/index.html
+++ b/index.html
@@ -1069,7 +1069,7 @@
         <!-- Center Image -->
         <div class="center-image">
             <!-- Replace with actual image or keep placeholder -->
-            <img src="C:\Users\gouri\Downloads\20250228_124128(1).png" alt="Profile Photo">
+            <img src="https://res.cloudinary.com/dprxaeuwi/image/upload/v1752738525/gjnnyyvka3svwmsnpzxg.jpg" alt="Profile Photo">
         </div>
 
         <!-- Right Section - Coder -->
