--- a/index.html
+++ b/index.html
@@ -1069,7 +1069,7 @@
         <!-- Center Image -->
         <div class="center-image">
             <!-- Replace with actual image or keep placeholder -->
-            <img src="https://github.com/yashverma2628/yashkecode/blob/main/20250228_124128(1).png?raw=true" alt="Profile Photo">
+            <img src="https://res.cloudinary.com/dprxaeuwi/image/upload/v1756402798/h4ayveco3ihl1zex3xos.png" alt="Profile Photo">
         </div>
 
         <!-- Right Section - Coder -->
@@ -1714,3 +1714,4 @@ document.addEventListener('DOMContentLoaded', function() {
     </script>
 </body>
 </html>
+
